# kitchen-sink

./: README.md
agda/: .gitignore  ADT.agda  AlgEff.agda  BracketAbs.agda  CFG.agda  CoDeBruijn.agda  ColistFusion.agda  DecLang.agda  Dissection.agda  FibStream.agda  FreeMonoid.agda  GrabDelimit.agda  InfZipper.agda  IrrLaterPrims.agda  Iso.agda  LaterPrims.agda  LevelsMonad.agda  ListFusion.agda  LogicInJapanese.agda  MultisetDrop.agda  PartialColist.agda  PartialTrunc.agda  PatternMatching.agda  Regular.agda  RunSend.agda  STLC.agda  Stream.agda  kitchen-sink.agda-lib
agda/Guarded/: CFG.agda  ColistFusion.agda  Domain.agda  IrrPrims.agda  LevelsMonad.agda  Partial.agda  PartialColist.agda  Prims.agda  Stream.agda
agda/HIT-playground/: FreeCat.agda  FreeMonoid.agda  InfList.agda  InitInfList.agda  List1.agda  List2.agda
agda/PatternMatch/: Exhaustiveness.agda  Pattern.agda  PatternMatch.agda  Syntax.agda  Utils.agda
agda/bracket-abs/: bracket-abs.agda
agda/brainfuck/: brainfuck.agda
agda/co-debruijn/: co-debruijn.agda
agda/guarded-playground/: Lang.agda  PartialColist.agda  guraded-playground.agda  instance-arguments.agda  list-fusion.agda  tick-irr.agda
agda/list-fusion/: list-fusion.agda  list-fusion.agdai
agda/mealy/: mealy.agda
agda/sized-types-playground/: fibs.agda
haskell/: .gitignore  cabal.project
haskell/arrow-effect-handlers/: README.md  arrow-effect-handlers.cabal
haskell/arrow-effect-handlers/app/: Main.hs
haskell/arrow-effect-handlers/src/Control/Arrow/: Effect.hs
haskell/arrow-effect-handlers/src/Control/Arrow/Effect/: ArrowApply.hs  Church.hs  Final.hs  MoreInputs.hs  Nondet.hs  Reader.hs  State.hs
haskell/bracket-abs/: bracket-abs.cabal
haskell/bracket-abs/app/: Main.hs
haskell/cardinality/: cardinality.cabal
haskell/cardinality/app/: Main.hs
haskell/cardinality/src/Data/: Card.hs
haskell/clown-joker/: README.md  clown-joker.cabal
haskell/clown-joker/app/: Main.hs
haskell/co-debruijn/: co-debruijn.cabal
haskell/co-debruijn/app/: Main.hs
haskell/cofreer/: cofreer.cabal
haskell/cofreer/app/: Main.hs
haskell/comp-calc/: README.md  comp-calc.cabal
haskell/comp-calc/app/: Main.hs
haskell/debruijn/: debruijn.cabal
haskell/debruijn/app/: Main.hs
haskell/delim-cont/: delim-cont.cabal
haskell/delim-cont/app/: Main.hs
haskell/dunai-playground/: README.md  dunai-playground.cabal
haskell/dunai-playground/app/: Main.hs
haskell/fcf-playground/: fcf-playground.cabal
haskell/fcf-playground/app/: Main.hs
haskell/fix-zoo/: fix-zoo.cabal
haskell/fix-zoo/app/: Main.hs
haskell/flow/: flow.cabal
haskell/flow/app/: Arrows.hs  Cartesian.hs  Main.hs  Port.hs
haskell/format/: format.cabal
haskell/format/app/: Main.hs
haskell/freer/: README.md  freer.cabal
haskell/freer-arrow/: freer-arrow.cabal
haskell/freer-arrow/app/: Main.hs
haskell/freer-pairing/: LICENSE  freer-pairing.cabal
haskell/freer-pairing/app/: Main.hs
haskell/freer/app/: AutoDiff.hs  CoinFlip.hs  Freer.hs  Main.hs
haskell/iso/: README.md  iso.cabal  signatures.txt  tderr
haskell/iso/app/: Main.hs
haskell/iso2/: README.md  iso2.cabal
haskell/iso2/app/: Main.hs
haskell/koka-with/: README.md  koka-with.cabal
haskell/koka-with/app/: Main.hs
haskell/memoized-hylo-with-representable/: README.md  memoized-hylo-with-representable.cabal
haskell/memoized-hylo-with-representable/app/: Main.hs
haskell/neq/: neq.cabal
haskell/neq/app/: Main.hs
haskell/pairing/: pairing.cabal
haskell/pairing/app/: Main.hs
haskell/regex-with-monoid/: README.md  regex-with-monoid.cabal
haskell/regex-with-monoid/app/: Main.hs
haskell/save-restore/: README.md  save-restore.cabal
haskell/save-restore/app/: Main.hs
haskell/shallow-handlers/: shallow-handlers.cabal
haskell/shallow-handlers/app/: Main.hs
haskell/typograms-with-zipper/: LICENSE  README.md  typograms-hs.cabal
haskell/typograms-with-zipper/app/: Main.hs
haskell/typograms-with-zipper/typograms/: mocks.txt
haskell/uniplate-playground/: README.md  uniplate-playground.cabal
haskell/uniplate-playground/app/: Main.hs
lean/free/: Free.lean  Main.lean  lake-manifest.json  lakefile.lean
lean/free/Free/: Basic.lean
ocaml/: dune-project
ocaml/c_printer/: README.md  dune  main.ml
ocaml/iso/: README.md  dune  main.ml
ocaml/koka-with/: main.ml
ocaml/lang/: main.ml
ocaml/nbe/: README.md  dune  main.ml
ocaml/tagless_final/: dune  main.ml
ocaml/trees-that-grow/: README.md  dune  example.txt  infer.ml  lexer.mll  main.ml  nat.txt  parser.mly  rename.ml  reporter.ml  syntax.ml
ocaml/zundoko-effect/: LICENSE  main.ml
rust/trees-that-grow/src/: main.rs
typescript/: tsconfig.json
typescript/lang/: lang.ts
typescript/optics/: optics.ts
