cabal-version:      3.0
name:               arrow-effect-handlers
version:            0.1.0.0
synopsis:
license:            BSD-3-Clause
license-file:       LICENSE
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
-- copyright:

common defaults
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -O2

library
    import: defaults
    hs-source-dirs: src
    exposed-modules:
        Control.Arrow.Effect
        Control.Arrow.Effect.ArrowApply
        Control.Arrow.Effect.Final
        Control.Arrow.Effect.MoreInputs
    build-depends:
        base >=4.16,
        constraints

executable arrow-effect-handlers-exe
    import: defaults
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16,
        arrows,
        arrow-effect-handlers
