cabal-version:      3.0
name:               freer
version:            0.1.0.0
synopsis:
license:            BSD-3-Clause
license-file:       LICENSE
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
-- copyright:

common defaults
    default-language: Haskell2010
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -O2

executable freer
    import: defaults
    hs-source-dirs: app
    main-is: Main.hs
    other-modules:
        Freer
        CoinFlip
        AutoDiff
    build-depends:
        base ^>=4.16.4.0,
        recursion-schemes,
        random
