cabal-version:      3.0
name:               iso
version:            0.1.0.0
synopsis:
license:            BSD-3-Clause
license-file:       LICENSE
author:             wasabi315
maintainer:         wasabi.nvim.st@gmail.com
-- copyright:

common defaults
    default-language: GHC2024
    default-extensions:
        BlockArguments
        DerivingStrategies
        OverloadedStrings
        PatternSynonyms
        Strict
        ViewPatterns
    ghc-options:
        -Wall
        -Wcompat
        -Wincomplete-record-updates
        -Wincomplete-uni-patterns
        -Wredundant-constraints
        -Wno-name-shadowing
        -O2
        -ddump-simpl
        -ddump-to-file
        -fllvm
        -rtsopts
        -threaded
        -feager-blackholing

executable iso
    import: defaults
    hs-source-dirs: app
    main-is: Main.hs
    build-depends:
        base >=4.16,
        containers,
        parallel